--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -30,17 +30,16 @@
 
         var resizeTimer; // Set resizeTimer to empty so it resets on page load
         function resizeFunction() {
+            // adjust font sizes based on container to use viewport height
+            $(".page img").relativeFontHeight({elements: $('.ocr-line')});
             // adjust ocr text on window load or resize
             $(".ocrtext").textwidth();
-            // possibly also adjust fonts here, if we go to viewport-width font size
         };
 
-        // On resize, run the function and reset the timeout
-        // 250 is the delay in milliseconds. Change as you see fit.
+        // On resize, run the function and reset the timeout with a 250ms delay
         $(window).resize(function() {
             clearTimeout(resizeTimer);
             resizeTimer = setTimeout(resizeFunction, 250);
-            // TODO: how to wait until after browser scales image for smaller viewport?
         });
 
        $(window).load(function() {  // wait until load completes, so widths will be calculated
@@ -109,10 +108,10 @@
                         <img src="{% url 'books:page-image' page.pid %}"/>
                         {% if page.tei.exists %}
                            {% for line in page.tei.content.lines %}
-                           <div class="ocr-line {% if not line.word_zones %}ocrtext{% endif %}" style="{{ line|zone_style:scale }}">
+                           <div class="ocr-line {% if not line.word_zones %}ocrtext{% endif %}" {{ line|zone_style:scale }}>
                                 {% for zone in line.word_zones %}
                                 {# NOTE: may not want ocrtext adjustment when there are multiple words on a line #}
-                                <div class="ocr-zone ocrtext" style="{{ zone|zone_style:scale }}">
+                                <div class="ocr-zone ocrtext" {{ zone|zone_style:scale }}>
                                     <span>{{ zone.text }}</span>
                                 </div>
                                 {% empty %} {# if no word zones, assume single line of text #}
