Overflow ellipsis for page headers
[#91424970]

- the linked headers on the page level will now be reduced in size and forced to a single line

--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -769,6 +769,15 @@ header#page-bg .collection-image-info.collasped .info{
     cursor: pointer;
 }
 
+.page-header h1 a {
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden;
+  display: inline-block;
+  text-overflow: ellipsis;
+  font-size: 70%;
+}
+
 
 @media(max-width:500px){
     .book .media>.pull-left,
