--- a/readux/books/templates/books/snippets/volume_header.html
+++ b/readux/books/templates/books/snippets/volume_header.html
@@ -35,26 +35,5 @@ Expects volume object as vol; set rdfa to true to enable RDFa properties.
         {# FIXME: or should we use schema:copyrightYear? #}
         {% endfor %}
     </p>
-
-    {# search inside this volume; *only* available if volume has pages loaded #}
-    {% if vol.has_pages and form %}
-    <div class="row">
-        <div class="col-xs-12 col-md-8 col-md-offset-2">
-            <form id="volume-search" class="search-bar" role="form" method="GET" action="{{ volume_url }}">
-                <label class="sr-only" for="{{ form.keyword.name }}">{{ form.keyword.label }}</label>
-                <div class="input-group">
-                  {% render_field form.keyword class+="form-control keyword" placeholder="Search in this volume" %}
-                  <span class="input-group-btn">
-                    <button class="btn" type="submit"><span class="glyphicon glyphicon-search"></span></button>
-                  </span>
-                </div><!-- /input-group -->
-                <span class="help-block">
-                    {{ form.keyword.help_text }}
-                    <p class="text-warning">Note: searching uncorrected OCR text content.</p>
-                </span>
-            </form>
-        </div>
-    </div>
-    {% endif %}
-
+    {% include 'books/snippets/volume_search_form.html' %}
 </header>
