--- a/readux/books/templates/books/snippets/volume_header.html
+++ b/readux/books/templates/books/snippets/volume_header.html
@@ -2,9 +2,17 @@
 Expects volume object as vol; set rdfa to true to enable RDFa properties.
 {% endcomment %}
 {% load widget_tweaks %}
+
+{% url 'books:volume' vol.pid as volume_url %}
+
 <header class="page-header">
+    {% if page %}
+    <div class="page-search">
+      <a class="trigger" href="#">Search this volume</a>
+      {% include 'books/snippets/volume_search_form.html' %}
+    </div>
+    {% endif %}
     <h1>
-        {% url 'books:volume' vol.pid as volume_url %}
         {# only link to volume landing page if we are not currently *on* that page #}
         {% if volume_url != request.get_full_path|urlencode %}
           <a href="{{ volume_url }}">
@@ -35,5 +43,7 @@ Expects volume object as vol; set rdfa to true to enable RDFa properties.
         {# FIXME: or should we use schema:copyrightYear? #}
         {% endfor %}
     </p>
-    {% include 'books/snippets/volume_search_form.html' %}
+    {% if not page %}
+      {% include 'books/snippets/volume_search_form.html' %}
+    {% endif %}
 </header>
