--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -910,3 +910,49 @@ header#page-bg .collection-image-info.collasped .info{
 #zoom-page.active+.page .content:after{
   display:none;
 }
+
+
+/*
+* Page level search
+*/
+
+.page-search {
+  position: relative;
+}
+
+.page-search+h1{
+  margin: 0;
+  padding-top: .5em;
+}
+
+.page-search .trigger {
+    position: absolute;
+    text-decoration:none;
+    top: -3em;
+    right: 1em;
+    padding: 1em 1em 0.75em;
+    border: 1px solid rgb(219, 219, 219);
+    background-color: #FFF;
+    color: rgb(108, 172, 231);
+    box-shadow: 0px 3px 3px rgb(229, 229, 229);
+    -o-transition:all 0.5s ease;
+    -moz-transition:all 0.5s ease;
+    -webkit-transition:all 0.5s ease;
+    transition:all 0.5s ease;
+}
+
+.page-search .trigger:hover, .page-search .trigger:focus {
+    box-shadow: 0px 3px 7px rgb(208, 208, 208);
+    color: rgb(106, 126, 145);
+}
+
+.page-search .trigger.active{
+  background: #58A3EC;
+  color: white;
+  box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+}
+
+.page-search .row{
+    display:none;
+    position: relative;
+}
