Enable social authentication
- twitter, google, and github enabled and tested
- facebook enabled but not yet tested

[#86636952]

--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -75,9 +75,11 @@
 </form>
 </div>
 {% endif %}
+  {% include 'snippets/login.html' %}
 {% endblock %}
 
 {% block content %}
+
 {% endblock %}
 
 {% block footer-content %}
