--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -885,11 +885,11 @@ header#page-bg .collection-image-info.collasped .info{
     -webkit-user-select: none;
     -o-user-select: none;
  }
- 
+
 .page .content{
   min-height:100px;
 }
- 
+
 .page .content:after {
   content: '';
   background-image: url('../img/377.GIF');
@@ -956,3 +956,32 @@ header#page-bg .collection-image-info.collasped .info{
     display:none;
     position: relative;
 }
+
+/* social login */
+.social-login {
+    display: inline-block;
+}
+.social-login ul {
+    margin: 0;
+    padding: 0;
+}
+.social-login button {
+    border-radius: 0;
+}
+.social-login .fa {
+    border-right: 1px solid black;
+    padding: 5px;
+    margin: 0 5px 0 0;
+    width: 30px;  /* make all the icons consistent width */
+    text-align: center;
+}
+/*  Do we want branding colors for identification?
+login-twitter a {
+    background-color: #55acee !important;
+    color: white !important;
+}
+.login-github a {
+    background-color: #f5f5f5 !important;
+}
+*/
+
