Display saved annotations for current page
- add absolute url for the current page to
  annotation data
- filter on current page url for displaying
  saved annotations

[#85804158]

--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -40,11 +40,11 @@
             // Attach the uri of the current page to all annotations to allow search.
             annotationData: {
                 {# FIXME: url is not quite right; use a model method? #}
-                'uri': '{{ site.domain|add:request.path }}'
+                'uri': '{{ page.absolute_url }}',
                {% if page.ark_uri %},'ark': '{{ page.ark_uri }}'{% endif %}
             },
             loadFromSearch: {
-                'uri': '{{ site.domain|add:request.path }}'
+                'uri': '{{ page.absolute_url }}'
               }
          };
 
