--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -83,8 +83,8 @@
                 <div id="zoom-page"></div>
                 <div class="page">
                     <div class="content">
+                        <a class="btn btn-green" id="toggle-annotations" alt="Toggle Annotations"><span class="fa fa-file-text-o"></span></a>
                         <aside class="secondary">
-                        <a class="btn btn-danger" id="toggle-annotations">Close</a>
                         </aside>
                         <section class="inner">
                           <img class="page-image" src="{% url 'books:page-image' page.pid %}"/>
