--- a/sitemedia/plugins/annotator/marginviewer.css
+++ b/sitemedia/plugins/annotator/marginviewer.css
@@ -3,31 +3,32 @@
   position: absolute;
   right: 0;
   top: 0;
+  width: 280px;
   height: 100%;
   overflow: scroll;
   text-align: left;
   padding-top: 100px;
+  margin-top: 10px;
 }
 
 #toggle-annotations {
-  position: relative;
+  position: absolute;
   z-index: 100;
-  float: right;
-  top: -75px;
+  top: 20px;
+  right: -15px;
 }
 
 .annotator-marginviewer-element {
-  border: 1px solid #DDDDDD;
   margin: 0px;
-        margin-bottom: 15px;
-        width: 227px;
+
+  margin-bottom: 30px;
+
+  width: 100%;
         padding: 0px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 2px;
   font-size: 12px;
-  -moz-box-shadow:    0px 4px 2px 0px rgba(0,0,0,0.25);
-  background-color: white;   border-radius: 2px;   box-shadow: 0 4px 6px 1px rgba(50, 50, 50, 0.14);
+  background-color: white;
+  border-bottom: 1px solid rgb(216, 216, 216);
+  padding-bottom: 15px;
 }
 
 .annotator-marginviewer-header {
@@ -36,29 +37,31 @@
   padding-right: 0.5em;
   padding-left: 0.5em;
 }
-.annotator-marginviewer-highlighted>.annotator-marginviewer-header {
-  background-color: #fbed20;
+.annotator-marginviewer-header {
+  background-color: #FFFFFF;
+  color: #999;
 }
 .annotator-marginviewer-selected>.annotator-marginviewer-header {
-  background-color: #fbed20;
+  color: #2EBE0E;
+  font-weight: bold;
 }
 
 .annotator-marginviewer-text {
   background-color: #FFFFFF;
-  padding: 0.5em;
+  padding: 0.5em 2em 1em;
+  border: 1px solid transparent;
+  cursor: pointer;
 }
 
 .annotator-marginviewer-highlighted>.annotator-marginviewer-text {
+
 }
 .annotator-marginviewer-selected>.annotator-marginviewer-text {
-    /* Mozilla: */
-    background: -moz-linear-gradient(top, #fef8cd, #f6edb5);
+    border: 1px solid #9BDF8C;
     /* Chrome, Safari:*/
-    background: -webkit-gradient(linear,
-                left top, left bottom, from(#fef8cd), to(#f6edb5));
     /* MSIE */
-    filter: progid:DXImageTransform.Microsoft.Gradient(
-                StartColorStr='#fef8cd', EndColorStr='#f6edb5', GradientType=0);
+    border-radius: 3px;
+    margin-top: 10px;
 }
 
 .annotator-hl{
@@ -72,4 +75,16 @@
 
 .annotator-hl-uber-temp{
   background-color: rgba(181, 0, 255, 0.28);
+}
+span.annotator-controls {
+    width: 100%;
+    background: rgb(234, 234, 234);
+    display: block;
+}
+
+span.annotator-controls button {
+}
+
+.annotator-marginviewer-element.annotator-marginviewer-selected {
+    border-bottom: none;
 }
