--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -5,7 +5,7 @@
 
 {% block css %}
   {{ block.super }}
-  <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.1.0/annotator.min.css"/>
+  {# <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.1.0/annotator.min.css"/> #}
   <link rel="stylesheet" href="{% static 'plugins/meltdown/css/meltdown.css' %}"/>
   <link rel="stylesheet" href="{% static 'plugins/annotator/marginviewer.css' %}"/>
 {% endblock %}
@@ -14,14 +14,17 @@
   {# FIXME: this should be redundant, but annotator requires at least jquery 1.6 and wasn't workining without #}
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
   {{ block.super }}
-  <script src="http://assets.annotateit.org/annotator/v1.1.0/annotator-full.min.js"></script>
+  {# <script src="http://assets.annotateit.org/annotator/v1.1.0/annotator-full.min.js"></script> #}
+  {# local copy of annotator; currently v2.0.0-alpha.2 #}
+  <script type="text/javascript" src="{% static 'js/annotator.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/openseadragon/openseadragon.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/deepzoom.js' %}"></script>
-  <script type="text/javascript" src="{% static 'plugins/annotator/marginviewer.js' %}"></script>
+  {# NOTE: annotator plugins disabled until they can be updated to 2.0 #}
+<!--  <script type="text/javascript" src="{% static 'plugins/annotator/marginviewer.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/meltdown/js/libs/js-markdown-extra.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/meltdown/js/libs/rangyinputs-jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/meltdown/js/libs/element_resize_detection.js' %}"></script>
-  <script type="text/javascript" src="{% static 'plugins/meltdown/js/jquery.meltdown.js' %}"></script>
+  <script type="text/javascript" src="{% static 'plugins/meltdown/js/jquery.meltdown.js' %}"></script> #} -->
   <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
   {% include 'books/snippets/book-page.js' %}
 {% endblock %}
