--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -7,7 +7,7 @@
   {{ block.super }}
   <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.1.0/annotator.min.css"/>
   <link rel="stylesheet" href="{% static 'plugins/meltdown/css/meltdown.css' %}"/>
-  <link rel="stylesheet" href="{% static 'plugins/annotator/marginviewer.css' %}"/>
+  <link rel="stylesheet" href="{% static 'plugins/annotator/marginalia.css' %}"/>
 {% endblock %}
 
 {% block javascript %}
@@ -28,7 +28,7 @@
   <script type="text/javascript" src="{% static 'plugins/meltdown/js/jquery.meltdown.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
 
-<!--  <script type="text/javascript" src="{% static 'js/annotator.marginviewer.js' %}"></script> -->
+  <script type="text/javascript" src="{% static 'js/annotator.marginalia.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/annotator.meltdown.js' %}"></script>
   {% include 'books/snippets/book-page.js' %}
 {% endblock %}
@@ -89,11 +89,6 @@
                 <div id="zoom-page"></div>
                 <div class="page">
                     <div class="content">
-                      {% if page.tei.exists and user.is_authenticated %}
-                        <a class="btn btn-green" id="toggle-annotations" alt="Toggle Annotations"><span class="fa fa-file-text-o"></span></a>
-                        <aside class="secondary">
-                        </aside>
-                      {% endif %}
                         <section class="inner">
                           <img class="page-image" src="{% url 'books:page-image' page.pid %}"/>
                           {% if page.tei.exists %}
