--- a/sitemedia/plugins/annotator/marginalia.css
+++ b/sitemedia/plugins/annotator/marginalia.css
@@ -21,6 +21,7 @@ ul.annotation-list {
     margin: 0;
     padding: 0;
     display: inline-block;
+    position: relative;
 }
 
 .annotation-list .marginalia-item {
