--- a/sitemedia/plugins/annotator/marginalia.css
+++ b/sitemedia/plugins/annotator/marginalia.css
@@ -22,6 +22,7 @@ ul.annotation-list {
     padding: 0;
     display: inline-block;
     position: relative;
+    padding-bottom: 80vh;
 }
 
 .annotation-list .marginalia-item {
