--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -5,9 +5,12 @@
 
 {% block css %}
   {{ block.super }}
-  <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.1.0/annotator.min.css"/>
+  {# <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.1.0/annotator.min.css"/> #}
+  {# local copy of annotator v2.0-alpha css #}
+  <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.css' %}"/>
   <link rel="stylesheet" href="{% static 'plugins/meltdown/css/meltdown.css' %}"/>
   <link rel="stylesheet" href="{% static 'plugins/annotator/marginalia.css' %}"/>
+  <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.meltdown.css' %}"/>
 {% endblock %}
 
 {% block javascript %}
@@ -29,7 +32,7 @@
   <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
 
   <script type="text/javascript" src="{% static 'js/annotator.marginalia.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/annotator.meltdown.js' %}"></script>
+  <script type="text/javascript" src="{% static 'plugins/annotator/annotator.meltdown.js' %}"></script>
   {% include 'books/snippets/book-page.js' %}
 {% endblock %}
 
