Updates to marginalia
[#94434028]

- Added viewer option for passing render function
- Made quotes consistant
- Added easing to scroll function
- Minor CSS tweaks

--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -1104,6 +1104,13 @@ li.meltdown_controlbutton > span {
     min-height: 30px;
 }
 
+.meltdown_wrap.fullscreen{
+  background-color: #CACACA;
+}
+
+.meltdown_preview-wrap .meltdown_preview-header{
+  display:none;
+}
 
 .btn-green {
   color: #FFF;
