Suppress annotator permissions edit fields
Temporary fix until annotator 2 authz is released.

--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -33,6 +33,7 @@
 
   <script type="text/javascript" src="{% static 'js/annotator.marginalia.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.meltdown.js' %}"></script>
+  <script type="text/javascript" src="{% static 'plugins/annotator/suppress_permissions.js' %}"></script>
   {% include 'books/snippets/book-page.js' %}
 {% endblock %}
 
