Standardize plugin location and names
[#94434028]

- Updated marginalia files to annotator.marginalia  and placed them in the plugins/annotator directory

--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -9,7 +9,7 @@
   {# local copy of annotator v2.0-alpha css #}
   <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.css' %}"/>
   <link rel="stylesheet" href="{% static 'plugins/meltdown/css/meltdown.css' %}"/>
-  <link rel="stylesheet" href="{% static 'plugins/annotator/marginalia.css' %}"/>
+  <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.marginalia.css' %}"/>
   <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.meltdown.css' %}"/>
 {% endblock %}
 
@@ -31,7 +31,7 @@
   <script type="text/javascript" src="{% static 'plugins/meltdown/js/jquery.meltdown.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
 
-  <script type="text/javascript" src="{% static 'js/annotator.marginalia.js' %}"></script>
+  <script type="text/javascript" src="{% static 'plugins/annotator/annotator.marginalia.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.meltdown.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/annotator/suppress_permissions.js' %}"></script>
   {% include 'books/snippets/book-page.js' %}
