--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -833,8 +833,8 @@ header#page-bg .collection-image-info.collasped .info{
 
 /* styles page image with ocr text overlaid */
 .page {
-    /*position: absolute;*/
-    /*z-index: 2;*/
+    position: relative;
+    z-index: 0;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -1127,4 +1127,14 @@ li.meltdown_controlbutton > span {
   color: #fff;
   background-color: #2B775F;
   border-color: #2B775F;
+}
+
+.marginalia-item .text table th{
+     padding: 3px 10px;
+     border-bottom: 3px solid #C8C3C3;
+}
+
+.marginalia-item .text table td {
+    border: 1px solid #CACACA;
+    padding: 10px;
 }
