--- a/sitemedia/plugins/annotator/annotator.marginalia.css
+++ b/sitemedia/plugins/annotator/annotator.marginalia.css
@@ -19,23 +19,86 @@
 ul.annotation-list {
   list-style: none;
   margin: 0;
-  padding: 0;
   display: inline-block;
   position: relative;
-  padding-bottom: 80vh;
-  padding-top:20vh;
-  padding-left: 10px;
+  padding:20vh 10px 80vh 10px;
 }
 
 .annotation-list .marginalia-item {
   font-size: 90%;
-  padding: 10px;
   float: left;
-  width: 100%;
   margin-bottom: 20px;
   border:1px solid transparent;
-  border-bottom: 1px solid lightgrey;
   cursor: pointer;
+  background-color: white;
+  border-radius: 2px;
+  box-shadow: 0 4px 6px 1px rgba(50, 50, 50, 0.14);
+  box-sizing: border-box;
+  color: black;
+  line-height: 1.5;
+  max-width: 640px;
+  padding: 30px 17px 30px 20px;
+  width: 100%;
+  position: relative;
+}
+
+.annotation-list .marginalia-item nav.controls {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.annotation-list .marginalia-item .dropdown-toggle {
+  float: right;
+  padding: 6px 17px;
+  font-size: 16px;
+  border-radius: 3px;
+  color: #9E9E9E;
+}
+
+.annotation-list .marginalia-item .dropdown-toggle:hover,
+.annotation-list .marginalia-item .dropdown-toggle:focus {
+  -webkit-box-shadow: 0 1px 2px 0 rgba(0,0,0,.1);
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,.1);
+  background-color: #fff;
+  border-color: #c2c2c2;
+}
+
+.annotation-list .marginalia-item .controls.dropdown.open .dropdown-toggle,
+.annotation-list .marginalia-item .dropdown-toggle:active{
+  -webkit-box-shadow: inset 0 1px 2px 0 rgba(0,0,0,.1);
+  box-shadow: inset 0 1px 2px 0 rgba(0,0,0,.1);
+  background-color: #e1e1e1;
+  border-color: #c2c2c2;
+}
+
+.annotation-list .marginalia-item .dropdown-menu {
+  left: inherit;
+  right: 0;
+  border-radius: 1px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.13);
+  border-color: transparent;
+}
+
+.annotation-list .marginalia-item .dropdown-menu>li>a {
+  border-color: transparent;
+  border-radius: 0px;
+  border-width: 0px;
+  border-left-width: 10px;
+  text-align: left;
+  padding: 10px 20px 10px 12px;
+}
+
+.annotation-list .marginalia-item .dropdown-menu>li>a:hover,
+.annotation-list .marginalia-item .dropdown-menu>li>a:active {
+    border-left-color: rgb(203, 203, 203);
+    background-color: rgb(242, 242, 242);
+}
+
+.annotation-list .marginalia-item .dropdown-menu>li>a.btn-delete:hover,
+.annotation-list .marginalia-item .dropdown-menu>li>a.btn-delete:active {
+    border-left-color: rgb(255, 161, 161);
+    background-color: rgb(255, 234, 234);
 }
 
 .annotator-hl{
