--- a/sitemedia/plugins/annotator/annotator.marginalia.css
+++ b/sitemedia/plugins/annotator/annotator.marginalia.css
@@ -1,6 +1,8 @@
 #toggle-annotations {
   position: absolute;
   z-index: 1000;
+  top: 0;
+  right: 0;
 }
 
 .margin-container {
@@ -9,7 +11,6 @@
   width: 300px;
   background: white;
   right: 0;
-  z-index: 100;
   height: 100%;
   overflow: scroll;
   text-align: left;
@@ -36,14 +37,18 @@ ul.annotation-list {
   box-sizing: border-box;
   color: black;
   line-height: 1.5;
+  min-width: 280px;
   max-width: 640px;
-  padding: 30px 17px 30px 20px;
   width: 100%;
   position: relative;
 }
 
+.annotation-list .marginalia-item .text {
+  padding: 30px 17px 30px 20px;
+}
+
 .annotation-list .marginalia-item nav.controls {
-  position: absolute;
+  position: relative;
   top: 0;
   right: 0;
 }
