Move position for annotation location
[#94434028]

--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -1138,3 +1138,7 @@ li.meltdown_controlbutton > span {
     border: 1px solid #CACACA;
     padding: 10px;
 }
+
+.carousel-control{
+  width:10%;
+}
