Minor adjustments to marginalia toggle
[#94434028]

- Moved to in-page container
- Changed right position to ems

--- a/sitemedia/plugins/annotator/annotator.marginalia.css
+++ b/sitemedia/plugins/annotator/annotator.marginalia.css
@@ -2,7 +2,7 @@
   position: absolute;
   z-index: 1000;
   top: 40px;
-  right: 8%;
+  right: 2em;
   left: auto;
   -webkit-transition: margin-right 0.5s ease;
   transition: margin-right 0.5s ease;
