--- a/sitemedia/plugins/annotator/annotator.marginalia.css
+++ b/sitemedia/plugins/annotator/annotator.marginalia.css
@@ -29,8 +29,38 @@ ul.annotation-list {
   margin: 0;
   display: inline-block;
   position: relative;
-  padding:80vh 10px 80vh 10px;
+  padding:100vh 10px 100vh 10px;
   width: 100%;
+  min-height:220vh
+}
+
+li.empty-item{
+  display:none;
+  visibility: hidden;
+}
+
+li.empty-item:first-child:last-child{
+  display:inline-block;
+  visibility: visible;
+  position: relative;
+  top: 8em;
+  right: 0;
+  height: 200px;
+  width: 100%;
+}
+
+li.empty-item:first-child:last-child:after {
+  content: 'No annotaitons to show.';
+  display: block;
+  position: absolute;
+  text-align:center;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  font-size: 2em;
+  padding: 0 1.5em;
+  color: rgb(223, 223, 223);
 }
 
 .annotation-list .marginalia-item {
