Select and annotate specific parts of a page image
[#85804334]

--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -34,6 +34,9 @@
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.marginalia.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.meltdown.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/annotator/suppress_permissions.js' %}"></script>
+  <script type="text/javascript" src="{% static 'plugins/annotator/annotator.imgselect.js' %}"></script>
+  <link rel="stylesheet" type="text/css" href="{% static 'plugins/imgareaselect/css/imgareaselect-default.css' %}" />
+  <script type="text/javascript" src="{% static 'plugins/imgareaselect/jquery.imgareaselect.min.js' %}"></script>
   {% include 'books/snippets/book-page.js' %}
 {% endblock %}
 
